<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context=".CrearPersonas">

	<TextView
		android:id="@+id/lblTituloCrear"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/titulo_crear"
		android:textAlignment="center"
		android:textSize="24sp"
		android:textStyle="bold" />

	<ImageView
		android:id="@+id/imgFotoSeleccionada"
		android:layout_width="222dp"
		android:layout_height="165dp"
		android:layout_gravity="center_horizontal"
		app:srcCompat="@android:drawable/ic_menu_gallery" />

	<EditText
		android:id="@+id/txtCedula"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:ems="10"
		android:inputType="textPersonName"
		android:text="@string/cedula" />

	<EditText
		android:id="@+id/txtNombre"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:ems="10"
		android:inputType="textPersonName"
		android:text="@string/nombre" />

	<EditText
		android:id="@+id/txtApellido"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:ems="10"
		android:inputType="textPersonName"
		android:text="@string/apellido" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="horizontal">

		<Button
			android:id="@+id/btnGuardar"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="5sp"
			android:layout_weight="1"
			android:text="@string/guardar" />

		<Button
			android:id="@+id/btnLimpiar"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/limpiar" />
	</LinearLayout>
</LinearLayout>
